# biomedical-data-platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/analytics_dashboard/: __init__.py  app.py
architecture/: system_architecture.md
config/: fhir_demo.yaml  sample_fhir.json  sample_fhir_bundle.json
data_models/dbt/: README.md  profiles.yml
data_quality/: run_validation.py
data_quality/expectations/: fhir_omop_suite.json
data_quality/great_expectations/: README.md
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml  sources.yml  stg_person.sql
docs/: SETUP_STEPS.md  setup.md  source_repos.md
docs/architecture/: README.md
docs/data_models/: README.md
docs/data_sources/: REAL_WORLD_INTEGRATIONS.md
docs/guidelines/: sample_guideline.md
docs/knowledge/: COLLABORATION_AND_STAKEHOLDERS.md  KNOWLEDGE_FOUNDATION.md
docs/pipelines/: README.md
infrastructure/: Dockerfile  docker-compose.yml
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/kubernetes/: airflow-deployment.yaml
infrastructure/terraform/: main.tf
ml/feature_repo/: feature_store.yaml  features.py
ml/rag_pipeline/: __init__.py  build_index.py
notebooks/: 01_explore_omop.md
orchestration/dags/: fhir_ingestion_dag.py  genomics_dag.py  rag_index_dag.py  rna_seq_dag.py
pipelines/: __init__.py
pipelines/fhir_ingestion/: __init__.py  (+1 more)
scripts/: generate_rna_seq_sample.py  generate_synthetic_oncology.py
src/: __init__.py
tests/: conftest.py  test_data_quality.py  test_mapper.py
(+33 files in other folders)
