[project]
name = "biomedical-data-platform"
version = "0.1.0"
description = "Senior-level data engineering platform for healthcare, genomics, and AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
